# telegram_crawler

./: .gitignore  Cargo.toml  testdb.sqlite3
src/: client_pool.rs  con_mgr.rs  consumer.rs  crawl.rs  crawl_old.rs  db.rs  dbi.rs  errors.rs  main.rs  pipe.rs  tg.rs  tg2.rs  tg_old.rs  tkanal.txt  types.rs  utils.rs
src/data/: crawling.sqlite.sql
src/tg/: connection.rs  converter.rs  downloader.rs  mod.rs  tg_old_full.rs
